# sample-gtest

./: CMakeLists.txt  README.md  test.cpp  test2.cpp
